EXTRA_DIST = \
	expansions.m4 \
	mono.snk \
	winfx3.pub
if ENABLE_TESTS
 SUBDIRS = WindowsBase UIAutomationTypes UIAutomationBridge UIAutomationProvider UIAutomationSource UIAutomationClient UIAutomationClientTests data
else
 SUBDIRS = WindowsBase UIAutomationTypes UIAutomationBridge UIAutomationProvider UIAutomationSource UIAutomationClient data
endif
