
EXTRA_DIST =  expansions.m4 mono-uia.snk

if ENABLE_TESTS
SUBDIRS =  UIAutomationWinforms UIAutomationWinformsTests po
else
SUBDIRS =  UIAutomationWinforms po
endif

EXTRA_DIST = \
    mono-uia.snk \
    intltool-extract.in \
    intltool-merge.in \
    intltool-update.in 

CLEANFILES = \
    intltool-extract \
    intltool-update \
    intltool-merge

MAINTAINERCLEANFILES = \
    compile \
    INSTALL \
    config.h.in \
    aclocal.m4 \
    ltmain.sh \
    Makefile.in \
    depcomp \
    missing \
    install-sh \
    configure \
    config.sub \
    config.guess \
    intltool-extract.in \
    intltool-merge.in   \
    intltool-update.in  \
    mkinstalldirs
